--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ else()
   add_definitions(-D_WIN32_WINNT=0x600)
 endif()
 
-# Protobuf
-# NOTE: we cannot use "CONFIG" mode here because protobuf-config.cmake
-# is broken when used with CMAKE_INSTALL_PREFIX
+## Protobuf
+## NOTE: we cannot use "CONFIG" mode here because protobuf-config.cmake
+## is broken when used with CMAKE_INSTALL_PREFIX
+## protoc -I protos --grpc_out=. --plugin=protoc-gen-grpc=/usr/local/bin/grpc_cpp_plugin protos/mpi.proto
+## protoc -I protos --cpp_out=. protos/mpi.proto
 find_package(Protobuf REQUIRED)
 message(STATUS "Using protobuf ${protobuf_VERSION}")
 
@@ -36,35 +38,39 @@ else()
   message(WARNING "Failed to locate libprotobuf and protoc!")
 endif()
 
-# gRPC
-find_package(gRPC CONFIG REQUIRED)
-message(STATUS "Using gRPC ${gRPC_VERSION}")
-
-# gRPC C++ plugin
-get_target_property(gRPC_CPP_PLUGIN_EXECUTABLE gRPC::grpc_cpp_plugin
-    IMPORTED_LOCATION_RELEASE)
-
-# Proto file
-get_filename_component(hw_proto "protos/mpi.proto" ABSOLUTE)
-get_filename_component(hw_proto_path "${hw_proto}" PATH)
-
+#
+## gRPC
+#find_package(gRPC CONFIG REQUIRED)
+#message(STATUS "Using gRPC ${gRPC_VERSION}")
+#
+## gRPC C++ plugin
+#get_target_property(gRPC_CPP_PLUGIN_EXECUTABLE gRPC::grpc_cpp_plugin
+#    IMPORTED_LOCATION_RELEASE)
+#
+## Proto file
+#get_filename_component(hw_proto "protos/mpi.proto" ABSOLUTE)
+#get_filename_component(hw_proto_path "${hw_proto}" PATH)
+#
 # Generated sources
-protobuf_generate_cpp(hw_proto_srcs hw_proto_hdrs "${hw_proto}")
-set(hw_grpc_srcs "${CMAKE_CURRENT_BINARY_DIR}/mpi_service.grpc.pb.cc")
-set(hw_grpc_hdrs "${CMAKE_CURRENT_BINARY_DIR}/mpi_service.grpc.pb.h")
-add_custom_command(
-      OUTPUT "${hw_grpc_srcs}" "${hw_grpc_hdrs}"
-      COMMAND ${_PROTOBUF_PROTOC}
-      ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}" -I "${hw_proto_path}"
-        --plugin=protoc-gen-grpc="${gRPC_CPP_PLUGIN_EXECUTABLE}"
-        "${hw_proto}"
-      DEPENDS "${hw_proto}")
+#protobuf_generate_cpp(hw_proto_srcs hw_proto_hdrs "${hw_proto}")
+#set(hw_grpc_srcs "${CMAKE_CURRENT_BINARY_DIR}/mpi_service.grpc.pb.cc")
+#set(hw_grpc_hdrs "${CMAKE_CURRENT_BINARY_DIR}/mpi_service.grpc.pb.h")
+#add_custom_command(
+#      OUTPUT "${hw_grpc_srcs}" "${hw_grpc_hdrs}"
+#      COMMAND ${_PROTOBUF_PROTOC}
+#      ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}" -I "${hw_proto_path}"
+#        --plugin=protoc-gen-grpc="${gRPC_CPP_PLUGIN_EXECUTABLE}"
+#        "${hw_proto}"
+#      DEPENDS "${hw_proto}")
+
+set(hw_grpc_srcs "${PROJECT_SOURCE_DIR}/mpi.grpc.pb.cc")
+set(hw_grpc_hdrs "${PROJECT_SOURCE_DIR}/mpi.grpc.pb.h")
 
 # Generated include directory
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
 # Targets greeter_[async_](client|server)
-foreach(_target)
+foreach(_target client server)
   add_executable(${_target} "${_target}.cc"
     ${hw_proto_srcs}
     ${hw_grpc_srcs})
